# perc

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
alloc/: .gitignore  Makefile.am  alloc_progs.c  cpu.c  cpu.h  cpuid.h  nvmalloc_progs  setprocessor.c  setprocessor.h
cache/: .gitignore  Makefile.am  cache.c  cache_progs.c  cpu.c  cpu.h  perc-test-intelsdp1044-2019_03_10__21_50_40-actual-pmem7.json  perc-test-intelsdp1044-2019_03_18__17_57_48-actual-pmem7.json  perc-test-intelsdp1044-2019_03_18__18_02_26-actual-pmem7.json  perc-test-intelsdp1044-2019_03_31__11_20_18-anonymous.json  perc-test-intelsdp1044-2019_03_31__11_20_18-emulated-pmem0.json  perc-test-intelsdp1044-2019_04_05__03_47_19-actual-pmem7.json  perc-test-intelsdp1044-2019_04_05__03_47_19-aep.csv  runtest.sh  setprocessor.c
cache/daxtest/: .gitignore  Makefile.am  daxtest.c
cpu/: Makefile.am  cpu.c  libcpu.la  libcpu_la-cpu.lo  libcpu_la-setprocessor.lo
cpu/.deps/: libcpu_la-cpu.Plo  libcpu_la-setprocessor.Plo
cpu/.libs/: libcpu.lai  libcpu.so.0  libcpu.so.0.0.0
data/: Book1(AutoRecovered).xlsx  Updated Microbenchmark Data.xlsx  data.txt  ed.sh  intelsdp1044-2018_08_13__44_55_26-perc-no-options.json  intelsdp1044-2018_08_13__44_55_26-perc-nvm-file.json  intelsdp1044-2018_08_13__44_55_26-perc-ssd-file.json  intelsdp1044-2018_08_13__44_55_26-perc-tmp-file.json  keycheck.py  perc-test-intelsdp1044-2018_09_04__17_26_16-anonymous.json  perc-test-intelsdp1044-2018_09_04__17_26_16-cwd.json  perc-test-intelsdp1044-2018_09_04__17_26_16-pmem0p1.json  perc-test-intelsdp1044-2018_09_04__17_26_16-pmem10.json  perc-test-intelsdp1044-2018_09_04__17_26_16-tmp.json  perc-test-intelsdp1044-2018_11_28__17_24_26-actual-pmem1.json  perc-test-intelsdp1044-2018_11_28__17_24_26-emulated-pmem0.json  perc-test-intelsdp1044-2018_11_29__14_50_04-actual-pmem1-test1.json  perc-test-intelsdp1044-2018_11_29__14_50_04-actual-pmem1-test2.json  perc-test-intelsdp1044-2018_11_29__14_50_04-actual-pmem1-test3.json  perc-test-intelsdp1044-2018_11_29__14_50_04-actual-pmem1-test6.json  perc-test-intelsdp1044-2018_11_29__14_50_04-actual-pmem1-test8.json  perc-test-intelsdp1044-2018_11_29__14_50_04-actual-pmem1-test9.csv  perc-test-intelsdp1044-2018_11_29__14_50_04-actual-pmem1.json  perc-test-intelsdp1044-2018_11_29__14_50_04-emulated-pmem0-test1.json  perc-test-intelsdp1044-2018_11_29__14_50_04-emulated-pmem0-test2.json  perc-test-intelsdp1044-2018_11_29__14_50_04-emulated-pmem0-test3.json  perc-test-intelsdp1044-2018_11_29__14_50_04-emulated-pmem0-test8.json  perc-test-intelsdp1044-2018_11_29__14_50_04-emulated-pmem0-test9.csv  perc-test-intelsdp1044-2018_11_29__14_50_04-emulated-pmem0.json  pm0p1.json  tb.py  test9A.csv  testdata.xlsx
include/: cpu.h  cpuid.h  setprocessor.h
kiss/: Makefile.am  kiss_alloc.c  kiss_alloc.h  libkiss.la  libkiss_la-kiss_alloc.lo
kiss/.deps/: libkiss_la-kiss_alloc.Plo
kiss/.libs/: libkiss.la  libkiss.lai  libkiss.so.0  libkiss.so.0.0.0
kiss/test/: .gitignore  Makefile.am  testkiss.c
kiss/test/.deps/: testkiss-testkiss.Po
mk/: addsan.am  c.am  rpcgen.am
munit/: Makefile.am
presentation/: perc evaluation.pptx  rpe presentation with Notes.pptx  rpe presentation.pptx
proposal/: .gitignore  nvdimm.bib  proposal_rpe-supplement.docx  rpe-proposal.tex  rpe-supplement.tex  rpe.tex
proposal/figures/: Sapience.ai
report/: .gitignore  abstract.tex  appendix.tex  conclusions.tex  discussion.tex  failure.bib  glossary.tex  impl.tex  intro.tex  laysummary.tex  model.tex  nvdimm.bib  phd-app-ref.bib  references.tex  relatedwork.tex  report.tex  rpe.bib  ubcdiss.cls
report/data/: Node Specific Load Data.xlsx  analysis.xlsx
report/data/mlc/: data-20180903.csv  data-20180909.csv  data-20180910.csv  data-20180911.csv
report/data/mlc/data-20180823/: mlc--bandwidth_matrix-R.csv  mlc--bandwidth_matrix-W10.csv  mlc--bandwidth_matrix-W2.csv  mlc--bandwidth_matrix-W3.csv  mlc--bandwidth_matrix-W5.csv  mlc--bandwidth_matrix-W7.csv  mlc--bandwidth_matrix-W8.csv  mlc--loaded_latency-R-cm1024.csv  mlc--loaded_latency-R-cm1048576.csv  mlc--loaded_latency-R-cm1073741824.csv  mlc--loaded_latency-R-cm1099511627776.csv  mlc--loaded_latency-R-cm128.csv  mlc--loaded_latency-R-cm131072.csv  mlc--loaded_latency-R-cm134217728.csv  mlc--loaded_latency-R-cm137438953472.csv  mlc--loaded_latency-R-cm140737488355328.csv  mlc--loaded_latency-R-cm16.csv  mlc--loaded_latency-R-cm16384.csv  mlc--loaded_latency-R-cm16777214.csv  mlc--loaded_latency-R-cm16777216.csv  mlc--loaded_latency-R-cm17179869184.csv  mlc--loaded_latency-R-cm17592186044416.csv  mlc--loaded_latency-R-cm2.csv  mlc--loaded_latency-R-cm2048.csv  mlc--loaded_latency-R-cm2097152.csv  mlc--loaded_latency-R-cm2147483648.csv  mlc--loaded_latency-R-cm2199023255552.csv  mlc--loaded_latency-R-cm256.csv  (+324 more)
stream/: .gitignore  2018-11-18-notes.txt  2018-11-19-notes.txt  Makefile.am  cache.h  copy-18-11-20-22:33.csv  copy-18-11-25-10-16.csv  copy-18-11-25-10-16.xlsx  copy-18-11-28-22:57.csv  copy-interlaced-2.sh  copy-interlaced.sh  copy-sequence-2.sh  copy-sequence-3.sh  copy-sequence-4.sh  copy-sequence-5.sh  copy-sequence-6.sh  copy-sequence-7.sh  copy-sequence.sh  copy-using-emulated-nvm-18-11-28-22-57.xlsx  copy-v5-18-12-04-12-38.csv  cpu-map.txt  cpu.h  foo.sh  foo2.sh  stream_progs.c
(+2392 files in other folders)
